<resources>
    <string name="app_name">Evidencia - Avance 2</string>
    <string name="txt_view_String">Codigo de Verificacion</string>
    <string name="txt_apellido1">Primer Apellido</string>
    <string name="txt_apellido2">Segundo Apellido</string>
    <string name="txt_nombre">Nombre</string>
    <string name="txt_genero">Genero</string>
    <string name="txt_nacimiento">Fecha de Nacimiento</string>
    <string name="txt_estado">Entidad Federativa de Nacimiento</string>
    <string name="txt_introducir">Introduce tus datos</string>
    <string name="tex_subir">Subir</string>
</resources>
