<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/state"
        android:layout_width="165dp"
        android:layout_height="19dp"
        android:inputType="text"
        android:text="@string/txt_introducir"
        android:hint="EntidadFederativa"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="213dp"
        tools:layout_editor_absoluteY="215dp" />

    <EditText
        android:id="@+id/birthday"
        android:layout_width="165dp"
        android:layout_height="19dp"
        android:inputType="text"
        android:text="@string/txt_introducir"
        android:hint="FechadeNacimiento"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="213dp"
        tools:layout_editor_absoluteY="180dp" />

    <EditText
        android:id="@+id/genre"
        android:layout_width="165dp"
        android:layout_height="19dp"
        android:inputType=""
        android:text="@string/txt_introducir"
        android:hint="Genero"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="213dp"
        tools:layout_editor_absoluteY="150dp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="165dp"
        android:layout_height="19dp"
        android:inputType="text"
        android:text="@string/txt_introducir"
        android:hint="Nombre"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="213dp"
        tools:layout_editor_absoluteY="123dp" />

    <EditText
        android:id="@+id/surname2"
        android:layout_width="165dp"
        android:layout_height="19dp"
        android:inputType="text"
        android:text="@string/txt_introducir"
        android:hint="SegundoApellido"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="213dp"
        tools:layout_editor_absoluteY="94dp" />

    <EditText
        android:id="@+id/surname1"
        android:layout_width="165dp"
        android:layout_height="19dp"
        android:inputType="text"
        android:text="@string/txt_introducir"
        android:hint="PrimerApelldio"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="213dp"
        tools:layout_editor_absoluteY="67dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_nacimiento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="174dp"
        android:layout_height="36dp"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_estado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_genero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ingresa tu Curp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:text="@string/txt_view_String"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="42dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_apellido1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginBottom="11dp"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:text="@string/txt_apellido2"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_nombre"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="123dp" />


    <EditText
        android:id="@+id/codigo"
        android:layout_width="165dp"
        android:layout_height="19dp"
        android:text="@string/txt_introducir"
        android:hint="CodigodeVerificacion"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="213dp"
        tools:layout_editor_absoluteY="42dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Subir datos"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="259dp" />

</android.support.constraint.ConstraintLayout>